--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ django_project/__pycache__/*
 users/__pycache__/*
 users/migrations/__pycache__/*
 media/profile_pics/*
+
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
