--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,22 @@
-asn1crypto==0.24.0
-attrs==19.3.0
-Automat==0.8.0
-cffi==1.13.2
+boto3==1.9.96
+botocore==1.12.96
+certifi==2018.10.15
 chardet==3.0.4
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-deluge==1.3.15
-Django==1.11.27
-django-autoslug-iplweb==1.9.4.dev0
-django-cities-light==3.5.0
-django-crispy-forms==1.8.1
-enum34==1.1.6
-gunicorn==19.10.0
-hyperlink==19.0.0
-idna==2.8
-incremental==17.5.0
-ipaddress==1.0.23
-Mako==1.1.1
-MarkupSafe==1.1.1
-Pillow==6.2.2
-progressbar2==3.47.0
-psutil==5.4.2
-psycopg2==2.7.4
-psycopg2-binary==2.8.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycparser==2.19
-pycrypto==2.6.1
-pygobject==3.26.1
-PyHamcrest==1.10.1
-pyOpenSSL==19.1.0
-pyparted==3.11.1
-python-apt==1.6.4
-python-libtorrent==1.1.5
-python-utils==2.3.0
-python-xapp==1.6.0
-python-xlib==0.20
-pytz==2019.3
-pyxdg==0.26
-rencode==1.0.6
-service-identity==18.1.0
-setproctitle==1.1.10
-six==1.14.0
-Twisted==19.10.0
-Unidecode==1.1.1
-zope.interface==4.7.1
+dj-database-url==0.5.0
+Django==2.1
+django-crispy-forms==1.7.2
+django-heroku==0.3.1
+django-storages==1.7.1
+docutils==0.14
+gunicorn==19.9.0
+idna==2.7
+jmespath==0.9.3
+Pillow==5.2.0
+psycopg2==2.7.7
+python-dateutil==2.8.0
+pytz==2018.5
+requests==2.19.1
+s3transfer==0.2.0
+six==1.12.0
+urllib3==1.23
+whitenoise==4.1.2
